# personal-briefing-engine

./: .env.example  .gitignore  HANDOFF.md  HUMAN_TODO.md  README.md  ROADMAP.md  environment.yml  podcast_server.py  pyproject.toml  run_fake.py  scheduler.py
adapters/: __init__.py  discord.py  rss.py  telegram.py
config/: briefings.toml.example  sources.toml.example
core/: __init__.py  config.py  config_edit.py  delivery.py  fixtures.py  models.py  obs.py  pipeline.py  podcast.py  store.py  synthesize.py  tts.py
web/: __init__.py  __main__.py  app.py
web/static/: app.css  forms.js
web/templates/: base.html  briefing_form.html  dashboard.html  source_form.html
