[project]
name = "personal-briefing-engine"
version = "0.1.0"
description = "A reduced layer over multiple information sources that boils them into periodic briefings."
requires-python = ">=3.11"      # tomllib is stdlib from 3.11
dependencies = [
    "anthropic>=0.116",   # synthesis
    "elevenlabs>=1.0",    # TTS (primary backend)
    "openai>=2.0",        # TTS (fallback backend: echo-plain)
    "python-dotenv>=1.0", # load secrets from .env
    # Added as each later subsystem lands:
    #   discord.py-self   — Discord user-token adapter
    #   telethon          — Telegram userbot adapter
    #   arxiv, feedparser — research/news adapters
    #   APScheduler       — scheduling (optional; cron works too)
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "adapters"]
