[project]
name = "personal-briefing-engine"
version = "0.1.0"
description = "A reduced layer over multiple information sources that boils them into periodic briefings."
requires-python = ">=3.11"      # tomllib is stdlib from 3.11
dependencies = [
    "anthropic>=0.116",   # synthesis
    "openai>=2.0",        # TTS (echo-plain)
    "python-dotenv>=1.0", # load secrets from .env
    "APScheduler>=3.10,<4", # scheduling (3.x BlockingScheduler/CronTrigger API)
    "requests>=2.31",     # Discord REST adapter
    "Flask>=3.0",         # localhost authoring/ops web UI (web/)
    "tomlkit>=0.12",      # comment-preserving TOML round-trip for the config editor
    "Telethon>=1.36",     # Telegram userbot adapter (MTProto, user account)
    # Added as each later subsystem lands:
    #   arxiv, feedparser — research/news adapters
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "adapters", "web"]
